lib/libGL/generated/program/program_parse.output
Terminals which are not used

   DOT


Grammar

    0 $accept: program $end

    1 program: language optionSequence statementSequence END

    2 language: ARBvp_10
    3         | ARBfp_10

    4 optionSequence: optionSequence option
    5               | /* empty */

    6 option: OPTION string ';'

    7 statementSequence: statementSequence statement
    8                  | /* empty */

    9 statement: instruction ';'
   10          | namingStatement ';'

   11 instruction: ALU_instruction
   12            | TexInstruction

   13 ALU_instruction: ARL_instruction
   14                | VECTORop_instruction
   15                | SCALARop_instruction
   16                | BINSCop_instruction
   17                | BINop_instruction
   18                | TRIop_instruction
   19                | SWZ_instruction

   20 TexInstruction: SAMPLE_instruction
   21               | KIL_instruction
   22               | TXD_instruction

   23 ARL_instruction: ARL maskedAddrReg ',' scalarSrcReg

   24 VECTORop_instruction: VECTOR_OP maskedDstReg ',' swizzleSrcReg

   25 SCALARop_instruction: SCALAR_OP maskedDstReg ',' scalarSrcReg

   26 BINSCop_instruction: BINSC_OP maskedDstReg ',' scalarSrcReg ',' scalarSrcReg

   27 BINop_instruction: BIN_OP maskedDstReg ',' swizzleSrcReg ',' swizzleSrcReg

   28 TRIop_instruction: TRI_OP maskedDstReg ',' swizzleSrcReg ',' swizzleSrcReg ',' swizzleSrcReg

   29 SAMPLE_instruction: SAMPLE_OP maskedDstReg ',' swizzleSrcReg ',' texImageUnit ',' texTarget

   30 KIL_instruction: KIL swizzleSrcReg
   31                | KIL ccTest

   32 TXD_instruction: TXD_OP maskedDstReg ',' swizzleSrcReg ',' swizzleSrcReg ',' swizzleSrcReg ',' texImageUnit ',' texTarget

   33 texImageUnit: TEXTURE_UNIT optTexImageUnitNum

   34 texTarget: TEX_1D
   35          | TEX_2D
   36          | TEX_3D
   37          | TEX_CUBE
   38          | TEX_RECT
   39          | TEX_SHADOW1D
   40          | TEX_SHADOW2D
   41          | TEX_SHADOWRECT
   42          | TEX_ARRAY1D
   43          | TEX_ARRAY2D
   44          | TEX_ARRAYSHADOW1D
   45          | TEX_ARRAYSHADOW2D

   46 SWZ_instruction: SWZ maskedDstReg ',' srcReg ',' extendedSwizzle

   47 scalarSrcReg: optionalSign scalarUse
   48             | optionalSign '|' scalarUse '|'

   49 scalarUse: srcReg scalarSuffix
   50          | paramConstScalarUse

   51 swizzleSrcReg: optionalSign srcReg swizzleSuffix
   52              | optionalSign '|' srcReg swizzleSuffix '|'

   53 maskedDstReg: dstReg optionalMask optionalCcMask

   54 maskedAddrReg: addrReg addrWriteMask

   55 extendedSwizzle: extSwizComp ',' extSwizComp ',' extSwizComp ',' extSwizComp

   56 extSwizComp: optionalSign extSwizSel

   57 extSwizSel: INTEGER
   58           | string

   59 srcReg: USED_IDENTIFIER
   60       | attribBinding
   61       | progParamArray '[' progParamArrayMem ']'
   62       | paramSingleItemUse

   63 dstReg: resultBinding
   64       | USED_IDENTIFIER

   65 progParamArray: USED_IDENTIFIER

   66 progParamArrayMem: progParamArrayAbs
   67                  | progParamArrayRel

   68 progParamArrayAbs: INTEGER

   69 progParamArrayRel: addrReg addrComponent addrRegRelOffset

   70 addrRegRelOffset: /* empty */
   71                 | '+' addrRegPosOffset
   72                 | '-' addrRegNegOffset

   73 addrRegPosOffset: INTEGER

   74 addrRegNegOffset: INTEGER

   75 addrReg: USED_IDENTIFIER

   76 addrComponent: MASK1

   77 addrWriteMask: MASK1

   78 scalarSuffix: MASK1

   79 swizzleSuffix: MASK1
   80              | MASK4
   81              | SWIZZLE
   82              | /* empty */

   83 optionalMask: MASK4
   84             | MASK3
   85             | MASK2
   86             | MASK1
   87             | /* empty */

   88 optionalCcMask: '(' ccTest ')'
   89               | '(' ccTest2 ')'
   90               | /* empty */

   91 ccTest: ccMaskRule swizzleSuffix

   92 ccTest2: ccMaskRule2 swizzleSuffix

   93 ccMaskRule: IDENTIFIER

   94 ccMaskRule2: USED_IDENTIFIER

   95 namingStatement: ATTRIB_statement
   96                | PARAM_statement
   97                | TEMP_statement
   98                | ADDRESS_statement
   99                | OUTPUT_statement
  100                | ALIAS_statement

  101 ATTRIB_statement: ATTRIB IDENTIFIER '=' attribBinding

  102 attribBinding: VERTEX vtxAttribItem
  103              | FRAGMENT fragAttribItem

  104 vtxAttribItem: POSITION
  105              | WEIGHT vtxOptWeightNum
  106              | NORMAL
  107              | COLOR optColorType
  108              | FOGCOORD
  109              | TEXCOORD optTexCoordUnitNum
  110              | MATRIXINDEX '[' vtxWeightNum ']'
  111              | VTXATTRIB '[' vtxAttribNum ']'

  112 vtxAttribNum: INTEGER

  113 vtxOptWeightNum: /* empty */
  114                | '[' vtxWeightNum ']'

  115 vtxWeightNum: INTEGER

  116 fragAttribItem: POSITION
  117               | COLOR optColorType
  118               | FOGCOORD
  119               | TEXCOORD optTexCoordUnitNum

  120 PARAM_statement: PARAM_singleStmt
  121                | PARAM_multipleStmt

  122 PARAM_singleStmt: PARAM IDENTIFIER paramSingleInit

  123 PARAM_multipleStmt: PARAM IDENTIFIER '[' optArraySize ']' paramMultipleInit

  124 optArraySize: /* empty */
  125             | INTEGER

  126 paramSingleInit: '=' paramSingleItemDecl

  127 paramMultipleInit: '=' '{' paramMultInitList '}'

  128 paramMultInitList: paramMultipleItem
  129                  | paramMultInitList ',' paramMultipleItem

  130 paramSingleItemDecl: stateSingleItem
  131                    | programSingleItem
  132                    | paramConstDecl

  133 paramSingleItemUse: stateSingleItem
  134                   | programSingleItem
  135                   | paramConstUse

  136 paramMultipleItem: stateMultipleItem
  137                  | programMultipleItem
  138                  | paramConstDecl

  139 stateMultipleItem: stateSingleItem
  140                  | STATE stateMatrixRows

  141 stateSingleItem: STATE stateMaterialItem
  142                | STATE stateLightItem
  143                | STATE stateLightModelItem
  144                | STATE stateLightProdItem
  145                | STATE stateTexGenItem
  146                | STATE stateTexEnvItem
  147                | STATE stateFogItem
  148                | STATE stateClipPlaneItem
  149                | STATE statePointItem
  150                | STATE stateMatrixRow
  151                | STATE stateDepthItem

  152 stateMaterialItem: MATERIAL optFaceType stateMatProperty

  153 stateMatProperty: ambDiffSpecProperty
  154                 | EMISSION
  155                 | SHININESS

  156 stateLightItem: LIGHT '[' stateLightNumber ']' stateLightProperty

  157 stateLightProperty: ambDiffSpecProperty
  158                   | POSITION
  159                   | ATTENUATION
  160                   | SPOT stateSpotProperty
  161                   | HALF

  162 stateSpotProperty: DIRECTION

  163 stateLightModelItem: LIGHTMODEL stateLModProperty

  164 stateLModProperty: AMBIENT
  165                  | optFaceType SCENECOLOR

  166 stateLightProdItem: LIGHTPROD '[' stateLightNumber ']' optFaceType stateLProdProperty

  167 stateLProdProperty: ambDiffSpecProperty

  168 stateTexEnvItem: TEXENV optLegacyTexUnitNum stateTexEnvProperty

  169 stateTexEnvProperty: COLOR

  170 ambDiffSpecProperty: AMBIENT
  171                    | DIFFUSE
  172                    | SPECULAR

  173 stateLightNumber: INTEGER

  174 stateTexGenItem: TEXGEN optTexCoordUnitNum stateTexGenType stateTexGenCoord

  175 stateTexGenType: EYE
  176                | OBJECT

  177 stateTexGenCoord: TEXGEN_S
  178                 | TEXGEN_T
  179                 | TEXGEN_R
  180                 | TEXGEN_Q

  181 stateFogItem: FOG stateFogProperty

  182 stateFogProperty: COLOR
  183                 | PARAMS

  184 stateClipPlaneItem: CLIP '[' stateClipPlaneNum ']' PLANE

  185 stateClipPlaneNum: INTEGER

  186 statePointItem: POINT_TOK statePointProperty

  187 statePointProperty: SIZE_TOK
  188                   | ATTENUATION

  189 stateMatrixRow: stateMatrixItem ROW '[' stateMatrixRowNum ']'

  190 stateMatrixRows: stateMatrixItem optMatrixRows

  191 optMatrixRows: /* empty */
  192              | ROW '[' stateMatrixRowNum DOT_DOT stateMatrixRowNum ']'

  193 stateMatrixItem: MATRIX stateMatrixName stateOptMatModifier

  194 stateOptMatModifier: /* empty */
  195                    | stateMatModifier

  196 stateMatModifier: INVERSE
  197                 | TRANSPOSE
  198                 | INVTRANS

  199 stateMatrixRowNum: INTEGER

  200 stateMatrixName: MODELVIEW stateOptModMatNum
  201                | PROJECTION
  202                | MVP
  203                | TEXTURE optTexCoordUnitNum
  204                | PALETTE '[' statePaletteMatNum ']'
  205                | MAT_PROGRAM '[' stateProgramMatNum ']'

  206 stateOptModMatNum: /* empty */
  207                  | '[' stateModMatNum ']'

  208 stateModMatNum: INTEGER

  209 statePaletteMatNum: INTEGER

  210 stateProgramMatNum: INTEGER

  211 stateDepthItem: DEPTH RANGE

  212 programSingleItem: progEnvParam
  213                  | progLocalParam

  214 programMultipleItem: progEnvParams
  215                    | progLocalParams

  216 progEnvParams: PROGRAM ENV '[' progEnvParamNums ']'

  217 progEnvParamNums: progEnvParamNum
  218                 | progEnvParamNum DOT_DOT progEnvParamNum

  219 progEnvParam: PROGRAM ENV '[' progEnvParamNum ']'

  220 progLocalParams: PROGRAM LOCAL '[' progLocalParamNums ']'

  221 progLocalParamNums: progLocalParamNum
  222                   | progLocalParamNum DOT_DOT progLocalParamNum

  223 progLocalParam: PROGRAM LOCAL '[' progLocalParamNum ']'

  224 progEnvParamNum: INTEGER

  225 progLocalParamNum: INTEGER

  226 paramConstDecl: paramConstScalarDecl
  227               | paramConstVector

  228 paramConstUse: paramConstScalarUse
  229              | paramConstVector

  230 paramConstScalarDecl: signedFloatConstant

  231 paramConstScalarUse: REAL
  232                    | INTEGER

  233 paramConstVector: '{' signedFloatConstant '}'
  234                 | '{' signedFloatConstant ',' signedFloatConstant '}'
  235                 | '{' signedFloatConstant ',' signedFloatConstant ',' signedFloatConstant '}'
  236                 | '{' signedFloatConstant ',' signedFloatConstant ',' signedFloatConstant ',' signedFloatConstant '}'

  237 signedFloatConstant: optionalSign REAL
  238                    | optionalSign INTEGER

  239 optionalSign: '+'
  240             | '-'
  241             | /* empty */

  242 @1: /* empty */

  243 TEMP_statement: optVarSize TEMP @1 varNameList

  244 optVarSize: string
  245           | /* empty */

  246 @2: /* empty */

  247 ADDRESS_statement: ADDRESS @2 varNameList

  248 varNameList: varNameList ',' IDENTIFIER
  249            | IDENTIFIER

  250 OUTPUT_statement: optVarSize OUTPUT IDENTIFIER '=' resultBinding

  251 resultBinding: RESULT POSITION
  252              | RESULT FOGCOORD
  253              | RESULT resultColBinding
  254              | RESULT POINTSIZE
  255              | RESULT TEXCOORD optTexCoordUnitNum
  256              | RESULT DEPTH

  257 resultColBinding: COLOR optResultFaceType optResultColorType

  258 optResultFaceType: /* empty */
  259                  | '[' INTEGER ']'
  260                  | FRONT
  261                  | BACK

  262 optResultColorType: /* empty */
  263                   | PRIMARY
  264                   | SECONDARY

  265 optFaceType: /* empty */
  266            | FRONT
  267            | BACK

  268 optColorType: /* empty */
  269             | PRIMARY
  270             | SECONDARY

  271 optTexCoordUnitNum: /* empty */
  272                   | '[' texCoordUnitNum ']'

  273 optTexImageUnitNum: /* empty */
  274                   | '[' texImageUnitNum ']'

  275 optLegacyTexUnitNum: /* empty */
  276                    | '[' legacyTexUnitNum ']'

  277 texCoordUnitNum: INTEGER

  278 texImageUnitNum: INTEGER

  279 legacyTexUnitNum: INTEGER

  280 ALIAS_statement: ALIAS IDENTIFIER '=' USED_IDENTIFIER

  281 string: IDENTIFIER
  282       | USED_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 88 89
')' (41) 88 89
'+' (43) 71 239
',' (44) 23 24 25 26 27 28 29 32 46 55 129 234 235 236 248
'-' (45) 72 240
';' (59) 6 9 10
'=' (61) 101 126 127 250 280
'[' (91) 61 110 111 114 123 156 166 184 189 192 204 205 207 216 219
    220 223 259 272 274 276
']' (93) 61 110 111 114 123 156 166 184 189 192 204 205 207 216 219
    220 223 259 272 274 276
'{' (123) 127 233 234 235 236
'|' (124) 48 52
'}' (125) 127 233 234 235 236
error (256)
ARBvp_10 (258) 2
ARBfp_10 (259) 3
ADDRESS (260) 247
ALIAS (261) 280
ATTRIB (262) 101
OPTION (263) 6
OUTPUT (264) 250
PARAM (265) 122 123
TEMP (266) 243
END (267) 1
BIN_OP (268) 27
BINSC_OP (269) 26
SAMPLE_OP (270) 29
SCALAR_OP (271) 25
TRI_OP (272) 28
VECTOR_OP (273) 24
ARL (274) 23
KIL (275) 30 31
SWZ (276) 46
TXD_OP (277) 32
INTEGER (278) 57 68 73 74 112 115 125 173 185 199 208 209 210 224 225
    232 238 259 277 278 279
REAL (279) 231 237
AMBIENT (280) 164 170
ATTENUATION (281) 159 188
BACK (282) 261 267
CLIP (283) 184
COLOR (284) 107 117 169 182 257
DEPTH (285) 211 256
DIFFUSE (286) 171
DIRECTION (287) 162
EMISSION (288) 154
ENV (289) 216 219
EYE (290) 175
FOG (291) 181
FOGCOORD (292) 108 118 252
FRAGMENT (293) 103
FRONT (294) 260 266
HALF (295) 161
INVERSE (296) 196
INVTRANS (297) 198
LIGHT (298) 156
LIGHTMODEL (299) 163
LIGHTPROD (300) 166
LOCAL (301) 220 223
MATERIAL (302) 152
MAT_PROGRAM (303) 205
MATRIX (304) 193
MATRIXINDEX (305) 110
MODELVIEW (306) 200
MVP (307) 202
NORMAL (308) 106
OBJECT (309) 176
PALETTE (310) 204
PARAMS (311) 183
PLANE (312) 184
POINT_TOK (313) 186
POINTSIZE (314) 254
POSITION (315) 104 116 158 251
PRIMARY (316) 263 269
PROGRAM (317) 216 219 220 223
PROJECTION (318) 201
RANGE (319) 211
RESULT (320) 251 252 253 254 255 256
ROW (321) 189 192
SCENECOLOR (322) 165
SECONDARY (323) 264 270
SHININESS (324) 155
SIZE_TOK (325) 187
SPECULAR (326) 172
SPOT (327) 160
STATE (328) 140 141 142 143 144 145 146 147 148 149 150 151
TEXCOORD (329) 109 119 255
TEXENV (330) 168
TEXGEN (331) 174
TEXGEN_Q (332) 180
TEXGEN_R (333) 179
TEXGEN_S (334) 177
TEXGEN_T (335) 178
TEXTURE (336) 203
TRANSPOSE (337) 197
TEXTURE_UNIT (338) 33
TEX_1D (339) 34
TEX_2D (340) 35
TEX_3D (341) 36
TEX_CUBE (342) 37
TEX_RECT (343) 38
TEX_SHADOW1D (344) 39
TEX_SHADOW2D (345) 40
TEX_SHADOWRECT (346) 41
TEX_ARRAY1D (347) 42
TEX_ARRAY2D (348) 43
TEX_ARRAYSHADOW1D (349) 44
TEX_ARRAYSHADOW2D (350) 45
VERTEX (351) 102
VTXATTRIB (352) 111
WEIGHT (353) 105
IDENTIFIER (354) 93 101 122 123 248 249 250 280 281
USED_IDENTIFIER (355) 59 64 65 75 94 280 282
MASK4 (356) 80 83
MASK3 (357) 84
MASK2 (358) 85
MASK1 (359) 76 77 78 79 86
SWIZZLE (360) 81
DOT_DOT (361) 192 218 222
DOT (362)


Nonterminals, with rules where they appear

$accept (120)
    on left: 0
program (121)
    on left: 1, on right: 0
language (122)
    on left: 2 3, on right: 1
optionSequence (123)
    on left: 4 5, on right: 1 4
option (124)
    on left: 6, on right: 4
statementSequence (125)
    on left: 7 8, on right: 1 7
statement (126)
    on left: 9 10, on right: 7
instruction (127)
    on left: 11 12, on right: 9
ALU_instruction (128)
    on left: 13 14 15 16 17 18 19, on right: 11
TexInstruction (129)
    on left: 20 21 22, on right: 12
ARL_instruction (130)
    on left: 23, on right: 13
VECTORop_instruction (131)
    on left: 24, on right: 14
SCALARop_instruction (132)
    on left: 25, on right: 15
BINSCop_instruction (133)
    on left: 26, on right: 16
BINop_instruction (134)
    on left: 27, on right: 17
TRIop_instruction (135)
    on left: 28, on right: 18
SAMPLE_instruction (136)
    on left: 29, on right: 20
KIL_instruction (137)
    on left: 30 31, on right: 21
TXD_instruction (138)
    on left: 32, on right: 22
texImageUnit (139)
    on left: 33, on right: 29 32
texTarget (140)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45, on right: 29 32
SWZ_instruction (141)
    on left: 46, on right: 19
scalarSrcReg (142)
    on left: 47 48, on right: 23 25 26
scalarUse (143)
    on left: 49 50, on right: 47 48
swizzleSrcReg (144)
    on left: 51 52, on right: 24 27 28 29 30 32
maskedDstReg (145)
    on left: 53, on right: 24 25 26 27 28 29 32 46
maskedAddrReg (146)
    on left: 54, on right: 23
extendedSwizzle (147)
    on left: 55, on right: 46
extSwizComp (148)
    on left: 56, on right: 55
extSwizSel (149)
    on left: 57 58, on right: 56
srcReg (150)
    on left: 59 60 61 62, on right: 46 49 51 52
dstReg (151)
    on left: 63 64, on right: 53
progParamArray (152)
    on left: 65, on right: 61
progParamArrayMem (153)
    on left: 66 67, on right: 61
progParamArrayAbs (154)
    on left: 68, on right: 66
progParamArrayRel (155)
    on left: 69, on right: 67
addrRegRelOffset (156)
    on left: 70 71 72, on right: 69
addrRegPosOffset (157)
    on left: 73, on right: 71
addrRegNegOffset (158)
    on left: 74, on right: 72
addrReg (159)
    on left: 75, on right: 54 69
addrComponent (160)
    on left: 76, on right: 69
addrWriteMask (161)
    on left: 77, on right: 54
scalarSuffix (162)
    on left: 78, on right: 49
swizzleSuffix (163)
    on left: 79 80 81 82, on right: 51 52 91 92
optionalMask (164)
    on left: 83 84 85 86 87, on right: 53
optionalCcMask (165)
    on left: 88 89 90, on right: 53
ccTest (166)
    on left: 91, on right: 31 88
ccTest2 (167)
    on left: 92, on right: 89
ccMaskRule (168)
    on left: 93, on right: 91
ccMaskRule2 (169)
    on left: 94, on right: 92
namingStatement (170)
    on left: 95 96 97 98 99 100, on right: 10
ATTRIB_statement (171)
    on left: 101, on right: 95
attribBinding (172)
    on left: 102 103, on right: 60 101
vtxAttribItem (173)
    on left: 104 105 106 107 108 109 110 111, on right: 102
vtxAttribNum (174)
    on left: 112, on right: 111
vtxOptWeightNum (175)
    on left: 113 114, on right: 105
vtxWeightNum (176)
    on left: 115, on right: 110 114
fragAttribItem (177)
    on left: 116 117 118 119, on right: 103
PARAM_statement (178)
    on left: 120 121, on right: 96
PARAM_singleStmt (179)
    on left: 122, on right: 120
PARAM_multipleStmt (180)
    on left: 123, on right: 121
optArraySize (181)
    on left: 124 125, on right: 123
paramSingleInit (182)
    on left: 126, on right: 122
paramMultipleInit (183)
    on left: 127, on right: 123
paramMultInitList (184)
    on left: 128 129, on right: 127 129
paramSingleItemDecl (185)
    on left: 130 131 132, on right: 126
paramSingleItemUse (186)
    on left: 133 134 135, on right: 62
paramMultipleItem (187)
    on left: 136 137 138, on right: 128 129
stateMultipleItem (188)
    on left: 139 140, on right: 136
stateSingleItem (189)
    on left: 141 142 143 144 145 146 147 148 149 150 151,
    on right: 130 133 139
stateMaterialItem (190)
    on left: 152, on right: 141
stateMatProperty (191)
    on left: 153 154 155, on right: 152
stateLightItem (192)
    on left: 156, on right: 142
stateLightProperty (193)
    on left: 157 158 159 160 161, on right: 156
stateSpotProperty (194)
    on left: 162, on right: 160
stateLightModelItem (195)
    on left: 163, on right: 143
stateLModProperty (196)
    on left: 164 165, on right: 163
stateLightProdItem (197)
    on left: 166, on right: 144
stateLProdProperty (198)
    on left: 167, on right: 166
stateTexEnvItem (199)
    on left: 168, on right: 146
stateTexEnvProperty (200)
    on left: 169, on right: 168
ambDiffSpecProperty (201)
    on left: 170 171 172, on right: 153 157 167
stateLightNumber (202)
    on left: 173, on right: 156 166
stateTexGenItem (203)
    on left: 174, on right: 145
stateTexGenType (204)
    on left: 175 176, on right: 174
stateTexGenCoord (205)
    on left: 177 178 179 180, on right: 174
stateFogItem (206)
    on left: 181, on right: 147
stateFogProperty (207)
    on left: 182 183, on right: 181
stateClipPlaneItem (208)
    on left: 184, on right: 148
stateClipPlaneNum (209)
    on left: 185, on right: 184
statePointItem (210)
    on left: 186, on right: 149
statePointProperty (211)
    on left: 187 188, on right: 186
stateMatrixRow (212)
    on left: 189, on right: 150
stateMatrixRows (213)
    on left: 190, on right: 140
optMatrixRows (214)
    on left: 191 192, on right: 190
stateMatrixItem (215)
    on left: 193, on right: 189 190
stateOptMatModifier (216)
    on left: 194 195, on right: 193
stateMatModifier (217)
    on left: 196 197 198, on right: 195
stateMatrixRowNum (218)
    on left: 199, on right: 189 192
stateMatrixName (219)
    on left: 200 201 202 203 204 205, on right: 193
stateOptModMatNum (220)
    on left: 206 207, on right: 200
stateModMatNum (221)
    on left: 208, on right: 207
statePaletteMatNum (222)
    on left: 209, on right: 204
stateProgramMatNum (223)
    on left: 210, on right: 205
stateDepthItem (224)
    on left: 211, on right: 151
programSingleItem (225)
    on left: 212 213, on right: 131 134
programMultipleItem (226)
    on left: 214 215, on right: 137
progEnvParams (227)
    on left: 216, on right: 214
progEnvParamNums (228)
    on left: 217 218, on right: 216
progEnvParam (229)
    on left: 219, on right: 212
progLocalParams (230)
    on left: 220, on right: 215
progLocalParamNums (231)
    on left: 221 222, on right: 220
progLocalParam (232)
    on left: 223, on right: 213
progEnvParamNum (233)
    on left: 224, on right: 217 218 219
progLocalParamNum (234)
    on left: 225, on right: 221 222 223
paramConstDecl (235)
    on left: 226 227, on right: 132 138
paramConstUse (236)
    on left: 228 229, on right: 135
paramConstScalarDecl (237)
    on left: 230, on right: 226
paramConstScalarUse (238)
    on left: 231 232, on right: 50 228
paramConstVector (239)
    on left: 233 234 235 236, on right: 227 229
signedFloatConstant (240)
    on left: 237 238, on right: 230 233 234 235 236
optionalSign (241)
    on left: 239 240 241, on right: 47 48 51 52 56 237 238
TEMP_statement (242)
    on left: 243, on right: 97
@1 (243)
    on left: 242, on right: 243
optVarSize (244)
    on left: 244 245, on right: 243 250
ADDRESS_statement (245)
    on left: 247, on right: 98
@2 (246)
    on left: 246, on right: 247
varNameList (247)
    on left: 248 249, on right: 243 247 248
OUTPUT_statement (248)
    on left: 250, on right: 99
resultBinding (249)
    on left: 251 252 253 254 255 256, on right: 63 250
resultColBinding (250)
    on left: 257, on right: 253
optResultFaceType (251)
    on left: 258 259 260 261, on right: 257
optResultColorType (252)
    on left: 262 263 264, on right: 257
optFaceType (253)
    on left: 265 266 267, on right: 152 165 166
optColorType (254)
    on left: 268 269 270, on right: 107 117
optTexCoordUnitNum (255)
    on left: 271 272, on right: 109 119 174 203 255
optTexImageUnitNum (256)
    on left: 273 274, on right: 33
optLegacyTexUnitNum (257)
    on left: 275 276, on right: 168
texCoordUnitNum (258)
    on left: 277, on right: 272
texImageUnitNum (259)
    on left: 278, on right: 274
legacyTexUnitNum (260)
    on left: 279, on right: 276
ALIAS_statement (261)
    on left: 280, on right: 100
string (262)
    on left: 281 282, on right: 6 58 244


state 0

    0 $accept: . program $end

    ARBvp_10  shift, and go to state 1
    ARBfp_10  shift, and go to state 2

    program   go to state 3
    language  go to state 4


state 1

    2 language: ARBvp_10 .

    $default  reduce using rule 2 (language)


state 2

    3 language: ARBfp_10 .

    $default  reduce using rule 3 (language)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 5


state 4

    1 program: language . optionSequence statementSequence END

    $default  reduce using rule 5 (optionSequence)

    optionSequence  go to state 6


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: language optionSequence . statementSequence END
    4 optionSequence: optionSequence . option

    OPTION  shift, and go to state 7

    $default  reduce using rule 8 (statementSequence)

    option             go to state 8
    statementSequence  go to state 9


state 7

    6 option: OPTION . string ';'

    IDENTIFIER       shift, and go to state 10
    USED_IDENTIFIER  shift, and go to state 11

    string  go to state 12


state 8

    4 optionSequence: optionSequence option .

    $default  reduce using rule 4 (optionSequence)


state 9

    1 program: language optionSequence statementSequence . END
    7 statementSequence: statementSequence . statement

    ADDRESS          shift, and go to state 13
    ALIAS            shift, and go to state 14
    ATTRIB           shift, and go to state 15
    PARAM            shift, and go to state 16
    END              shift, and go to state 17
    BIN_OP           shift, and go to state 18
    BINSC_OP         shift, and go to state 19
    SAMPLE_OP        shift, and go to state 20
    SCALAR_OP        shift, and go to state 21
    TRI_OP           shift, and go to state 22
    VECTOR_OP        shift, and go to state 23
    ARL              shift, and go to state 24
    KIL              shift, and go to state 25
    SWZ              shift, and go to state 26
    TXD_OP           shift, and go to state 27
    IDENTIFIER       shift, and go to state 10
    USED_IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 245 (optVarSize)

    statement             go to state 28
    instruction           go to state 29
    ALU_instruction       go to state 30
    TexInstruction        go to state 31
    ARL_instruction       go to state 32
    VECTORop_instruction  go to state 33
    SCALARop_instruction  go to state 34
    BINSCop_instruction   go to state 35
    BINop_instruction     go to state 36
    TRIop_instruction     go to state 37
    SAMPLE_instruction    go to state 38
    KIL_instruction       go to state 39
    TXD_instruction       go to state 40
    SWZ_instruction       go to state 41
    namingStatement       go to state 42
    ATTRIB_statement      go to state 43
    PARAM_statement       go to state 44
    PARAM_singleStmt      go to state 45
    PARAM_multipleStmt    go to state 46
    TEMP_statement        go to state 47
    optVarSize            go to state 48
    ADDRESS_statement     go to state 49
    OUTPUT_statement      go to state 50
    ALIAS_statement       go to state 51
    string                go to state 52


state 10

  281 string: IDENTIFIER .

    $default  reduce using rule 281 (string)


state 11

  282 string: USED_IDENTIFIER .

    $default  reduce using rule 282 (string)


state 12

    6 option: OPTION string . ';'

    ';'  shift, and go to state 53


state 13

  247 ADDRESS_statement: ADDRESS . @2 varNameList

    $default  reduce using rule 246 (@2)

    @2  go to state 54


state 14

  280 ALIAS_statement: ALIAS . IDENTIFIER '=' USED_IDENTIFIER

    IDENTIFIER  shift, and go to state 55


state 15

  101 ATTRIB_statement: ATTRIB . IDENTIFIER '=' attribBinding

    IDENTIFIER  shift, and go to state 56


state 16

  122 PARAM_singleStmt: PARAM . IDENTIFIER paramSingleInit
  123 PARAM_multipleStmt: PARAM . IDENTIFIER '[' optArraySize ']' paramMultipleInit

    IDENTIFIER  shift, and go to state 57


state 17

    1 program: language optionSequence statementSequence END .

    $default  reduce using rule 1 (program)


state 18

   27 BINop_instruction: BIN_OP . maskedDstReg ',' swizzleSrcReg ',' swizzleSrcReg

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 60
    dstReg         go to state 61
    resultBinding  go to state 62


state 19

   26 BINSCop_instruction: BINSC_OP . maskedDstReg ',' scalarSrcReg ',' scalarSrcReg

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 63
    dstReg         go to state 61
    resultBinding  go to state 62


state 20

   29 SAMPLE_instruction: SAMPLE_OP . maskedDstReg ',' swizzleSrcReg ',' texImageUnit ',' texTarget

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 64
    dstReg         go to state 61
    resultBinding  go to state 62


state 21

   25 SCALARop_instruction: SCALAR_OP . maskedDstReg ',' scalarSrcReg

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 65
    dstReg         go to state 61
    resultBinding  go to state 62


state 22

   28 TRIop_instruction: TRI_OP . maskedDstReg ',' swizzleSrcReg ',' swizzleSrcReg ',' swizzleSrcReg

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 66
    dstReg         go to state 61
    resultBinding  go to state 62


state 23

   24 VECTORop_instruction: VECTOR_OP . maskedDstReg ',' swizzleSrcReg

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 67
    dstReg         go to state 61
    resultBinding  go to state 62


state 24

   23 ARL_instruction: ARL . maskedAddrReg ',' scalarSrcReg

    USED_IDENTIFIER  shift, and go to state 68

    maskedAddrReg  go to state 69
    addrReg        go to state 70


state 25

   30 KIL_instruction: KIL . swizzleSrcReg
   31                | KIL . ccTest

    IDENTIFIER  shift, and go to state 71
    '+'         shift, and go to state 72
    '-'         shift, and go to state 73

    $default  reduce using rule 241 (optionalSign)

    swizzleSrcReg  go to state 74
    ccTest         go to state 75
    ccMaskRule     go to state 76
    optionalSign   go to state 77


state 26

   46 SWZ_instruction: SWZ . maskedDstReg ',' srcReg ',' extendedSwizzle

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 78
    dstReg         go to state 61
    resultBinding  go to state 62


state 27

   32 TXD_instruction: TXD_OP . maskedDstReg ',' swizzleSrcReg ',' swizzleSrcReg ',' swizzleSrcReg ',' texImageUnit ',' texTarget

    RESULT           shift, and go to state 58
    USED_IDENTIFIER  shift, and go to state 59

    maskedDstReg   go to state 79
    dstReg         go to state 61
    resultBinding  go to state 62


state 28

    7 statementSequence: statementSequence statement .

    $default  reduce using rule 7 (statementSequence)


state 29

    9 statement: instruction . ';'

    ';'  shift, and go to state 80


state 30

   11 instruction: ALU_instruction .

    $default  reduce using rule 11 (instruction)


state 31

   12 instruction: TexInstruction .

    $default  reduce using rule 12 (instruction)


state 32

   13 ALU_instruction: ARL_instruction .

    $default  reduce using rule 13 (ALU_instruction)


state 33

   14 ALU_instruction: VECTORop_instruction .

    $default  reduce using rule 14 (ALU_instruction)


state 34

   15 ALU_instruction: SCALARop_instruction .

    $default  reduce using rule 15 (ALU_instruction)


state 35

   16 ALU_instruction: BINSCop_instruction .

    $default  reduce using rule 16 (ALU_instruction)


state 36

   17 ALU_instruction: BINop_instruction .

    $default  reduce using rule 17 (ALU_instruction)


state 37

   18 ALU_instruction: TRIop_instruction .

    $default  reduce using rule 18 (ALU_instruction)


state 38

   20 TexInstruction: SAMPLE_instruction .

    $default  reduce using rule 20 (TexInstruction)


state 39

   21 TexInstruction: KIL_instruction .

    $default  reduce using rule 21 (TexInstruction)


state 40

   22 TexInstruction: TXD_instruction .

    $default  reduce using rule 22 (TexInstruction)


state 41

   19 ALU_instruction: SWZ_instruction .

    $default  reduce using rule 19 (ALU_instruction)


state 42

   10 statement: namingStatement . ';'

    ';'  shift, and go to state 81


state 43

   95 namingStatement: ATTRIB_statement .
